--- a/events/index.html
+++ b/events/index.html
@@ -4,7 +4,7 @@ title: Hao Zou - Events
 ---
 <div class="events">
 	<p>
-		This is a list of upcoming and past events that I helped to (co-)organized or have been involved.
+		This is a list of upcoming and past events that I (co-)organized or have been involved.
 	</p>	
 	<ul style="font-size:1.5em; line-height: 150%; list-style-type: square"> 
 		<li> 
