--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -8,7 +8,7 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
 	</h2>
 	<p>
-		This weekly event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaboration among people sharing the same research interests. 	
+		This weekly event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaborations among people sharing the same research interests. 	
 	</p>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>
