--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -22,7 +22,7 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 			<br> Title: An Overview of Recent Developments in Celestial CFT
 			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Date and Time: 4:00 - 6:00 PM, Jan 13, 2022.
-			<br> Notes: <a href="http://www.goshboard.com/res/img.html?id=fb4251f1b4b84932be9c83dcdd323595" target="_blank" rel="noopener noreferrer"> Link to notes </a>
+			<br> Notes: <a href="CCFT1.pdf" target="_blank" rel="noopener noreferrer"> Link to notes </a>
 		</li>
 		<li>
 			Speaker: Bo Lin (Tsinghua University)
