--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -29,7 +29,7 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 			<br> Title: Quantum Entanglement Meets Topological Field Theory: An Introduction for Pedestrians
 			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Date and Time: 1:00 - 2:00 PM, Jan 10, 2022.
-			<br> Notes: <a href="http://www.goshboard.com/res/img.html?id=2ac40ceeaa4e4b0a8fe6bb4021148e2b" target="_blank" rel="noopener noreferrer"> Link to notes </a>
+			<br> Notes: <a href="lin_tqe.pdf" target="_blank" rel="noopener noreferrer"> Link to notes </a>
 		</li>
 	</ul>
 		
