--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -23,6 +23,7 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Date and Time: 4:00 - 6:00 PM, Jan 13, 2022.
 			<br> Notes: <a href="CCFT1.pdf" target="_blank" rel="noopener noreferrer"> Link to notes </a>
+			<br> References: 1705.01027, 1910.07424, 2004.04309, 2009.02938, 2009.03883, 2103.04420, 2104.13432, 2105.01026, 2107.02075
 		</li>
 		<li>
 			Speaker: Bo Lin (Tsinghua University)
