--- a/research/index.html
+++ b/research/index.html
@@ -11,13 +11,13 @@ title: Hao Zou - Research
 	<h2>Selected papers </h2>
 	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827" target="_blank" rel="noopener noreferrer">INSPIRE-HEP</a>. </p>
 	<ol style="font-size:1.2em; line-height: 150%">
-		<li>X. Gao and <strong>H. Zou</strong>, "Machine Learning to the Orientifold Calabi-Yau with String Vacua," <a href = "https://arxiv.org/abs/2112.04950"> arXiv:2112.04950 [hep-th]</a>. </li>
+		<li>X. Gao and <strong>H. Zou</strong>, "Applying machine learning to the Calabi-Yau orientifold with string vacua," Phys. Rev. D 105, no.4, 4 (2022), <a href = "https://arxiv.org/abs/2112.04950"> arXiv:2112.04950 [hep-th]</a>. </li>
 		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," <a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
-		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
+		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," J. Geom. Phys. 177 (2022) 104548, <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," JHEP 10, 200 (2020), <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "Notes on two-dimensional pure supersymmetric gauge theories," JHEP 04, 261 (2021), <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
-		<li>W. Gu and <strong>H. Zou</strong>, "Supersymmetric Localization in GLSMs for Supermanifolds," JHEP 05, 019 (2019), <a href="arXiv:1807.05455 "> arXiv:1807.05455 [hep-th]</a>.</li>
-		<li>H. Parsian, E.Sharpe and <strong>H. Zou</strong>, "(0,2) versions of exotic (2,2) GLSMs," Int. J. Mod. Phys. A 33 (2018) no.18n19, 1850113, <a href ="https://arxiv.org/abs/1803.00286"> arXiv:1803.00286 [hep-th]</a>.</li>
+		<li>W. Gu and <strong>H. Zou</strong>, "Supersymmetric localization in GLSMs for supermanifolds," JHEP 05, 019 (2019), <a href="arXiv:1807.05455 "> arXiv:1807.05455 [hep-th]</a>.</li>
+		<li>H. Parsian, E.Sharpe and <strong>H. Zou</strong>, "(0,2) versions of exotic (2,2) GLSMs," Int. J. Mod. Phys. A 33, no.18n19, 1850113 (2018), <a href ="https://arxiv.org/abs/1803.00286"> arXiv:1803.00286 [hep-th]</a>.</li>
 	</ol>
 	
 	<h2>Selected talks </h2>
