--- a/events/index.html
+++ b/events/index.html
@@ -13,5 +13,8 @@ title: Hao Zou - Events
 		<li> 
 			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong> <a href="bimsagroup/">More...</a>
 		</li>
+		<li>
+			<strong> BIMSA HEP-TH Seminar (2022 - present) </strong> <a href="bimsaseminar/">More...</a>
+		</li>
 	</ul>
 </div>
