--- a/events/bimsaseminar/index.html
+++ b/events/bimsaseminar/index.html
@@ -1,1 +1,28 @@
-
+---
+layout: default
+title: Hao Zou - BIMSA HEP-TH Seminar
+---
+<div class="events">
+	<p style="font-size:1.0em; text-align:right;" > <a href="https://hhzou.github.io/events/"> Go back for other events </a> </p>
+	<h2>
+		BIMSA HEP-TH Seminar
+	</h2>
+	<p>
+		This seminar is intended for young researchers to present and share their recent works. 
+	</p>
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
+		<li>
+			Speaker: Yang Lei
+			<br> Title: (To be confirmed)
+			<br> Location: (To be confirmed)
+			<br> Date and Time: (To be confirmed)
+		</li>
+		<li>
+			Speaker: Shuichi Yokoyama (YITP, Kyoto U.)
+			<br> Title: (To be confirmed)
+			<br> Location: (To be confirmed)
+			<br> Date and Time: (To be confirmed)
+		</li>
+	</ul>
+		
+</div>
