--- a/events/bimsaseminar/index.html
+++ b/events/bimsaseminar/index.html
@@ -26,7 +26,7 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 		</li>
 		
 		<li>
-			Speaker: Hao Ou-Yang (Jilin U.)
+			Speaker: Hao Ouyang (Jilin U.)
 			<br> Title: Fermionic BPS Wilson loops in four-dimensional N=2 superconformal gauge theories
 			<br> Abstract: We construct fermionic BPS Wilson loops in N=2 superconformal SU(N)×SU(N) quiver theory and N=4 super Yang-Mills theory. The connections of these fermionic BPS Wilson have a supermatrix structure. We construct timelike BPS Wilson lines in Minkowski spacetime and circle BPS Wilson loops in Euclidean space. These Wilson loops involve dimensionful parameters. For generic values of parameters, they preserve one real (complex) supercharge in Lorentzian (Euclidean) signature. Supersymmetry enhancement for Wilson loops happens when the parameters satisfy certain constraints.
 			<br> Date and Time: 3:00 PM, June 8, 2022.
