--- a/events/bimsaseminar/index.html
+++ b/events/bimsaseminar/index.html
@@ -13,7 +13,7 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>
 			Speaker: Yang Lei (IAS, Soochow U.)
-			<br> Title: $$SL(3, Z)$$ modularity and 4d partition functions
+			<br> Title: $SL(3, Z)$ modularity and 4d partition functions
 			<br> Abstract: One of the most exciting progress in understanding AdS/CFT in the past few years is the success of reproducing AdS5 black hole entropy from the computation of N=4 SYM. This generalizes the early understandings about BTZ black hole entropy, which can be counted from the SL(2,Z) modularity of 2d CFT partition functions. In this talk, I will explain how to apply the SL(3,Z)  modularity of partition  functions of N=4 SYM to understand the entropy of dual AdS5 black hole. Besides, it is known that 2d CFT partition functions reveal a phase diagram for SL(2,Z) family of black holes in the dual gravity, which are parametrized by a rational number the moduli will take value in. This is known as the Farey tail story. I will also explain the evidence about SL(3,Z) family of saddles existing, which are parametrized by a pair of independent rational numbers. This gives a generalized SL(3,Z) modularity which is less known in the literature.
 			<br> Date and Time: 3:00 PM, May 25, 2022.
 		<br/><br/>
