--- a/events/bimsaseminar/index.html
+++ b/events/bimsaseminar/index.html
@@ -10,7 +10,7 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 	<p>
 		This seminar is intended for young researchers to present and share their recent works. 
 	</p>
-	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square; text-align:justify;"> 
 		<li>
 			Speaker: Yang Lei (IAS, Soochow U.)
 			<br> Title: SL(3, Z) modularity and 4d partition functions
@@ -20,8 +20,8 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 		</li>
 		<li>
 			Speaker: Shuichi Yokoyama (YITP, Kyoto U.)
-			<br> Title: (To be confirmed)
-			<br> Abstract: (To be confirmed)
+			<br> Title: Special flow equation and GKP-Witten relation
+			<br> Abstract: I will speak about my recent work on a new framework for the reconstruction of bulk theory dual to conformal field theory (CFT) by means of flow equation. A flow equation generally describes a non-local course-graining of elementary fields consisting of given quantum field theory so as to remove the contact divergence. This property of the flow equation enables one to construct a class of composite operators which behave as geometric objects including metric in the holographic space after taking the quantum average. In this talk I will explain a certain extension from the free flow equation, which we call a special flow equation. Using the special flow equation, the conformal transformation for a normalized smeared operator exactly becomes the isometry of anti-de Sitter space (AdS). By employing this special flow equation with O(N) vector models, we explicitly show that the AdS geometry as well as the scalar field satisfying the GKP-Witten relation concurrently emerge in this framework.
 			<br> Date and Time: 5:00 PM, June 1, 2022.
 		<br/><br/>
 		</li>
