--- a/events/bimsaseminar/index.html
+++ b/events/bimsaseminar/index.html
@@ -5,7 +5,7 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 <div class="events">
 	<p style="font-size:1.0em; text-align:right;" > <a href="https://hhzou.github.io/events/"> Go back for other events </a> </p>
 	<h2>
-		BIMSA HEP-TH Seminar
+		Joint HEP-TH Seminar
 	</h2>
 	<p>
 		This seminar is intended for young researchers to present and share their recent works. 
@@ -22,7 +22,7 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 			Speaker: Shuichi Yokoyama (YITP, Kyoto U.)
 			<br> Title: Special flow equation and GKP-Witten relation
 			<br> Abstract: I will speak about my recent work on a new framework for the reconstruction of bulk theory dual to conformal field theory (CFT) by means of flow equation. A flow equation generally describes a non-local course-graining of elementary fields consisting of given quantum field theory so as to remove the contact divergence. This property of the flow equation enables one to construct a class of composite operators which behave as geometric objects including metric in the holographic space after taking the quantum average. In this talk I will explain a certain extension from the free flow equation, which we call a special flow equation. Using the special flow equation, the conformal transformation for a normalized smeared operator exactly becomes the isometry of anti-de Sitter space (AdS). By employing this special flow equation with O(N) vector models, we explicitly show that the AdS geometry as well as the scalar field satisfying the GKP-Witten relation concurrently emerge in this framework.
-			<br> Date and Time: 5:00 PM, June 1, 2022.
+			<br> Date and Time: 4:00 PM, June 1, 2022.
 		<br/><br/>
 		</li>
 		
@@ -32,6 +32,13 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 			<br> Abstract: We construct fermionic BPS Wilson loops in N=2 superconformal SU(N)×SU(N) quiver theory and N=4 super Yang-Mills theory. The connections of these fermionic BPS Wilson have a supermatrix structure. We construct timelike BPS Wilson lines in Minkowski spacetime and circle BPS Wilson loops in Euclidean space. These Wilson loops involve dimensionful parameters. For generic values of parameters, they preserve one real (complex) supercharge in Lorentzian (Euclidean) signature. Supersymmetry enhancement for Wilson loops happens when the parameters satisfy certain constraints.
 			<br> Date and Time: 3:00 PM, June 8, 2022.
 		<br/><br/>
+		</li>
+
+		<li>
+			Speaker: Syo Kamata (Narodowe Centrum Badań Jądrowych)
+			<br>Title: (To be announced)
+			<br>Abstract: (To be announced)
+			<br>Date and Time: 3:00 PM, June 22, 2022
 		</li>
 	</ul>
 		
