update seminar title

--- a/events/index.html
+++ b/events/index.html
@@ -10,11 +10,15 @@ title: Hao Zou - Events
 		<li> 
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
 		</li>
+		
+		<!-- 
 		<li> 
 			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong> <a href="bimsagroup/">More...</a>
 		</li>
+		-->
+		
 		<li>
-			<strong> BIMSA HEP-TH Seminar (2022 - present) </strong> <a href="bimsaseminar/">More...</a>
+			<strong> Joint HEP-TH Seminar (2022 - present) </strong> <a href="bimsaseminar/">More...</a>
 		</li>
 	</ul>
 </div>
