--- a/events/jointseminar/index.html
+++ b/events/jointseminar/index.html
@@ -39,6 +39,23 @@ title: Hao Zou - BIMSA HEP-TH Seminar
 			<br>Title: (To be announced)
 			<br>Abstract: (To be announced)
 			<br>Date and Time: 3:00 PM, June 22, 2022
+		<br/><br>
+		</li>
+		
+		<li>
+			Speaker: Kaiwen Sun (KIAS)
+			<br>Title: (To be announced)
+			<br>Abstract: (To be announced)
+			<br>Date and Time: 3:00 PM, June 29, 2022
+		<br/><br>
+		</li>
+		
+		<li>
+			Speaker: Xiaomeng Xu (Peking U.)
+			<br>Title: (To be announced)
+			<br>Abstract: (To be announced)
+			<br>Date and Time: 3:00 PM, July 6, 2022
+		<br/><br>
 		</li>
 	</ul>
 		
