--- a/events/index.html
+++ b/events/index.html
@@ -18,7 +18,7 @@ title: Hao Zou - Events
 		-->
 		
 		<li>
-			<strong> Joint HEP-TH Seminar (2022 - present) </strong> <a href="jointseminar/">More...</a>
+			<strong> Joint HEP-TH Seminar (2022 - present) </strong> <a href="https://jointhepth.github.io">More...</a>
 		</li>
 	</ul>
 </div>
