--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ title: Hao Zou - Homepage
 ---
 
 <div class="about">
+  
+  <h2> About </h2>
+
   <p>   
     I am currently a joint postdoc at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a> and <a href="https://ymsc.tsinghua.edu.cn/cn" target="_blank" rel="noopener noreferrer">YMSC, Tsinghua</a>. I received my PhD degree in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
   </p>
@@ -14,7 +17,7 @@ title: Hao Zou - Homepage
   Hao Zou <br>Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
   </p>  
   <p>
-  Office: Room 1119, Fengyeju (Villa 11), Yanqi Island <br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
+  Office: Room 1132, Fengyeju (Villa 11), Yanqi Island <br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
   </p>
   
   
