--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: CV
 ---
-<div class="cv">
+<div class="posts">
 	<h2> Employment </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>Sep, 2021 - present, joint postdoc at <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong> and <strong>Yau Mathematical Sciences Center (YMSC) of Tsinghua University</strong>, Beijing, China.
