--- a/events/index.html
+++ b/events/index.html
@@ -2,11 +2,11 @@
 layout: default
 title: Events
 ---
-<div class="events">
+<div class="posts">
 	<p>
 		This is a list of upcoming and past events that I (co-)organized or have been involved.
 	</p>	
-	<ul style="font-size:1.5em; line-height: 150%; list-style-type: square"> 
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li> 
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
 		</li>
