--- a/research/index.html
+++ b/research/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Research
 ---
-<div class="research">
+<div class="posts">
 	<h2>Research interests</h2>
 	<p>
 		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics. I am also interested in quantum information, quantum computation and machine learning in theoretical high energy physics.
@@ -10,7 +10,7 @@ title: Research
 	
 	<h2>Selected papers </h2>
 	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827" target="_blank" rel="noopener noreferrer">INSPIRE-HEP</a>. </p>
-	<ol style="font-size:1.2em; line-height: 150%">
+	<ol style="font-size:1em; line-height: 150%">
 		<li>X. Gao and <strong>H. Zou</strong>, "Applying machine learning to the Calabi-Yau orientifold with string vacua," Phys. Rev. D 105, no.4, 4 (2022), <a href = "https://arxiv.org/abs/2112.04950"> arXiv:2112.04950 [hep-th]</a>. </li>
 		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," <a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," J. Geom. Phys. 177 (2022) 104548, <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
@@ -21,7 +21,7 @@ title: Research
 	</ol>
 	
 	<h2>Selected talks </h2>
-	<ol style="font-size:1.2em; line-height: 150%">
+	<ol style="font-size:1em; line-height: 150%">
 		<li>"2d TQFT 101 - Part II," <br> BIMSA-Tsinghua Quantum Symmetry Seminar, BIMSA, Jan 6, 2022.</li>
 		<li>"2d TQFT 101 - Part I," <br> BIMSA-Tsinghua Quantum Symmetry Seminar, BIMSA, Dec 30, 2021.</li>
 		<li>"GLSMs for Symplectic Grassmannians and Symplectic Flag Manifolds," <br> Postdoc Workshop, Beijing Kuangou Conference Center, Sep 10, 2021.</li>
