--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@ title: Homepage
 
 <div class="posts">
   
-  <h2> About </h2>
+  <h2> About Me</h2>
 
   <p>   
     I am currently a joint postdoc at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a> and <a href="https://ymsc.tsinghua.edu.cn/cn" target="_blank" rel="noopener noreferrer">YMSC, Tsinghua</a>. I received my PhD degree in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
   </p>
   
   
-  <h2> Contact information </h2>
+  <h2> Contact </h2>
   <p>
-  Hao Zou <br>Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
+  Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
   </p>  
   <p>
   Office: Room 1132, Fengyeju (Villa 11), Yanqi Island <br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
