--- a/events/index.html
+++ b/events/index.html
@@ -4,7 +4,7 @@ title: Events
 ---
 <div class="posts">
 	<p>
-		This is a list of upcoming and past events that I (co-)organized or have been involved.
+		Here is a list of upcoming and past events that I (co-)organized.
 	</p>	
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li> 
