--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ title: Home
   </p>
   
   
-  <p style="font-size:18px";> <strong>Useful links:</strong>
-    <a href="https://ymsc-strings.github.io" target="_blank" rel="noopener noreferrer">String Group at YMSC</a> | 
+  <p style="font-size:18px";> <strong>Useful links:</strong> 
+    <br>
+    <a href="https://ymsc-strings.github.io" target="_blank" rel="noopener noreferrer">String Group at YMSC</a>| <a href="https://bimsastring.github.io" target="_blank" rel="noopener noreferrer">String Group at BIMSA</a> | 
     <a href="https://www.stringwiki.org/wiki/String_Theory_Wiki" target="_blank" rel="noopener noreferrer">String Theory Wiki</a> | 
     <a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html" target="_blank" rel="noopener noreferrer">Some mathematical resources</a> |
     <a href="http://researchseminars.org" target="_blank" rel="noopener noreferrer">Online seminars</a> 
