--- a/research/index.html
+++ b/research/index.html
@@ -11,6 +11,9 @@ title: Research
 	<h2>Selected papers </h2>
 	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827" target="_blank" rel="noopener noreferrer">INSPIRE-HEP</a>. </p>
 	<ol style="font-size:1em; line-height: 150%">
+	<!--	
+		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of Grassmannians, Wilson line operators, and Schur bundles, " in preparation.</li>
+	-->	
 		<li>X. Gao and <strong>H. Zou</strong>, "Applying machine learning to the Calabi-Yau orientifold with string vacua," Phys. Rev. D 105, no.4, 4 (2022), <a href = "https://arxiv.org/abs/2112.04950"> arXiv:2112.04950 [hep-th]</a>. </li>
 		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," <a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," J. Geom. Phys. 177 (2022) 104548, <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
