--- a/research/index.html
+++ b/research/index.html
@@ -15,8 +15,8 @@ title: Research
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of Grassmannians, Wilson line operators, and Schur bundles, " in preparation.</li>
 	-->	
 		<li>X. Gao and <strong>H. Zou</strong>, "Applying machine learning to the Calabi-Yau orientifold with string vacua," Phys. Rev. D 105, no.4, 4 (2022), <a href = "https://arxiv.org/abs/2112.04950"> arXiv:2112.04950 [hep-th]</a>. </li>
-		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," <a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
-		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," J. Geom. Phys. 177 (2022) 104548, <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
+		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," J. Phys. A: Math. Theor. 55, 275401 (2022)<a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
+		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," J. Geom. Phys. 177, 104548 (2022), <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," JHEP 10, 200 (2020), <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "Notes on two-dimensional pure supersymmetric gauge theories," JHEP 04, 261 (2021), <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
 		<li>W. Gu and <strong>H. Zou</strong>, "Supersymmetric localization in GLSMs for supermanifolds," JHEP 05, 019 (2019), <a href="arXiv:1807.05455 "> arXiv:1807.05455 [hep-th]</a>.</li>
