--- a/research/index.html
+++ b/research/index.html
@@ -14,6 +14,7 @@ title: Research
 	<!--	
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of Grassmannians, Wilson line operators, and Schur bundles, " in preparation.</li>
 	-->	
+		<li>P. Zhao and <strong>H. Zou</strong>, "Remarks on 2d Unframed Quiver Gauge Theories, " <a href="https://arxiv.org/abs/2206.14793"> arXiv:2206.14793 [hep-th]</a>. </li>
 		<li>X. Gao and <strong>H. Zou</strong>, "Applying machine learning to the Calabi-Yau orientifold with string vacua," Phys. Rev. D 105, no.4, 4 (2022), <a href = "https://arxiv.org/abs/2112.04950"> arXiv:2112.04950 [hep-th]</a>. </li>
 		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," J. Phys. A: Math. Theor. 55, 275401 (2022)<a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," J. Geom. Phys. 177, 104548 (2022), <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
