--- a/research/index.html
+++ b/research/index.html
@@ -5,7 +5,7 @@ title: Research
 <div class="posts">
 	<h2>Research interests</h2>
 	<p>
-		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics. I am also interested in quantum information, quantum computation and machine learning in theoretical high energy physics.
+		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory, integrable systems as well as related mathematical topics. I am also interested in machine learning in theoretical studies.
 	</p>
 	
 	<h2>Selected papers </h2>
