--- a/events/index.html
+++ b/events/index.html
@@ -19,9 +19,20 @@ title: Events
 			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong> <a href="bimsagroup/">More...</a>
 		</li>
 		-->
-		
+		<li> <strong> Seminar </strong> 
+			<ul style="font-size:1 em; line-height: 120%; list-style-type: circle;">
+				<li>
+					Joint HEP-TH Seminar (2022 - present) <a href="https://jointhepth.github.io" target="_blank" rel="noopener noreferrer">More...</a>
+				</li>
+			</ul>
+		</li>
 		<li>
-			<strong> Joint HEP-TH Seminar (2022 - present) </strong> <a href="https://jointhepth.github.io" target="_blank" rel="noopener noreferrer">More...</a>
+			<strong> Conference </strong> 
+			<ul>
+				<li>
+			 		Strings at Sanya (in preparation, Nov. 8-11, 2022)
+				</li>	
+			</ul>
 		</li>
 	</ul>
 </div>
