--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ title: Home
   
   <h2> Contact </h2>
   <p>
-  Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
+  Yanqi Lake Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
   </p>  
   <p>
-  Office: Room 102, A3-4 <br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
+  Office: Room 102, Building A3-4<br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
   </p>
   
   
