--- a/research/index.html
+++ b/research/index.html
@@ -14,6 +14,7 @@ title: Research
 	<!--	
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of Grassmannians, Wilson line operators, and Schur bundles, " in preparation.</li>
 	-->	
+		<li> W. Gu, L. Mihalcea, E. Sharpe, W. Xu, H. Zhang and <strong>H. Zou</strong>, ``Quantum K theory rings of partial flag manifolds,'' <a href="https://arxiv.org/abs/2306.11094"> arXiv:2306.11094 [hep-th]</a>. </li>
 		<li> H.F. Shu, P. Zhao, R.D. Zhu and <strong>H. Zou</strong>, "Bethe-State Counting and the Witten Index," <a href="https://arxiv.org/abs/2210.07116"> arXiv:2210.07116[hep-th]</a>.</li>
 		<li> C.M. Chang, W. Cui, W.J. Ma, H.F. Shu and <strong>H. Zou</strong>, "Shadow Celestial Amplitudes," <a href="https://arxiv.org/abs/2210.04725"> arXiv:2210.04725[hep-th]</a>. </li>
 		<li> W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of Grassmannians, Wilson line operators, and Schur bundles," <a href="https://arxiv.org/abs/2208.01091"> arXiv:2208.01091[math.AG]</a>.</li>
