--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@ title: Home
   <h2> About Me</h2>
 
   <p>   
-    I am currently a joint postdoc at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a> and <a href="https://ymsc.tsinghua.edu.cn/cn" target="_blank" rel="noopener noreferrer">YMSC, Tsinghua</a>. I received my PhD degree in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
+    I am currently working as an assistant professor at Shanghai Institute for Mathematics and Interdisciplinary Sciences (SIMIS). Before joining SIMIS, I was a joint postdoc at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a> and <a href="https://ymsc.tsinghua.edu.cn/cn" target="_blank" rel="noopener noreferrer">YMSC, Tsinghua</a>. I received my PhD degree in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
   </p>
   
   
   <h2> Contact </h2>
   <p>
-  Yanqi Lake Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
+  Shanghai Institute for Mathematics and Interdisciplinary Sciences <br>Yangpu District, Shanghai 200433, China
   </p>  
   <p>
-  Office: Room 102, Building A3-4<br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
+  Office: 6th Floor, Building 3, KIC Enterprise Center<br> E-mail: hzou "at" vt.edu
   </p>
   
   
   <p style="font-size:18px";> <strong>Useful links:</strong> 
     <br>
-    <a href="https://ymsc-strings.github.io" target="_blank" rel="noopener noreferrer">String Group at YMSC</a> | <a href="https://bimsastring.github.io" target="_blank" rel="noopener noreferrer">String Group at BIMSA</a> | 
+    <a href="https://ymsc-strings.github.io" target="_blank" rel="noopener noreferrer">String Group at YMSC</a> | 
     <a href="https://www.stringwiki.org/wiki/String_Theory_Wiki" target="_blank" rel="noopener noreferrer">String Theory Wiki</a> | 
     <a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html" target="_blank" rel="noopener noreferrer">Some mathematical resources</a> |
     <a href="http://researchseminars.org" target="_blank" rel="noopener noreferrer">Online seminars</a> 
