--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,9 @@ title: CV
 <div class="posts">
 	<h2> Employment </h2>
 	<ul style="font-size:1em; line-height: 150%; list-style-type: square"> 
-		<li>Sep, 2021 - present:
+		<li>Feb, 2024 - present:
+		<br> Assistant professor at <strong>Shanghai Institute for Mathematics and Interdisciplinary Science</strong>, Shanghai, China.
+		<li>Sep, 2021 - Jan, 2024:
 		<br> Joint postdoc at <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong> and <strong>Yau Mathematical Sciences Center (YMSC) of Tsinghua University</strong>, Beijing, China.
 	</ul>	
 	<h2> Education </h2>
