--- a/cv/index.html
+++ b/cv/index.html
@@ -6,9 +6,15 @@ title: CV
 	<h2> Employment </h2>
 	<ul style="font-size:1em; line-height: 150%; list-style-type: square"> 
 		<li>Feb, 2024 - present:
-		<br> Assistant professor at <strong>Shanghai Institute for Mathematics and Interdisciplinary Science</strong>, Shanghai, China.
+			<br> 
+			Assistant professor at <strong>Shanghai Institute for Mathematics and Interdisciplinary Science (SIMIS)</strong>, Shanghai, China.
+			</br>
+		</li>
 		<li>Sep, 2021 - Jan, 2024:
-		<br> Joint postdoc at <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong> and <strong>Yau Mathematical Sciences Center (YMSC) of Tsinghua University</strong>, Beijing, China.
+			<br> 
+			Joint postdoc at <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong> and <strong>Yau Mathematical Sciences Center (YMSC) of Tsinghua University</strong>, Beijing, China.
+			</br>
+		</li>
 	</ul>	
 	<h2> Education </h2>
 	<ul style="font-size:1em; line-height: 150%; list-style-type: square"> 
