--- a/events/index.html
+++ b/events/index.html
@@ -22,10 +22,12 @@ title: Events
 		<li> <strong> Seminar </strong> 
 			<ul style="font-size:1 em; line-height: 120%; list-style-type: circle;">
 				<li>
-					SIMIS Seminar on Field Theory and String Theory (Mar, 2024 - present)
+					SIMIS Seminar on Field Theory and String Theory 
+					(Mar, 2024 - present)
 				</li>
 				<li>
-					Joint HEP-TH Seminar (May, 2022 - present) <a href="https://jointhepth.github.io" target="_blank" rel="noopener noreferrer">More...</a>
+					Joint HEP-TH Seminar 
+					(May, 2022 - present) <a href="https://jointhepth.github.io" target="_blank" rel="noopener noreferrer">More...</a>
 				</li>
 			</ul>
 		</li>
