--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,12 @@ title: CV
 <div class="posts">
 	<h2> Employment </h2>
 	<ul style="font-size:1em; line-height: 150%; list-style-type: square"> 
-		<li>Feb, 2024 - present:
+		<li>Jun. 2024 - present:
+			<br> 
+			Assistant professor at <strong>Center for Mathematics and Interdisciplinary Science at Fudan University</strong>, Shanghai, China.
+			</br>
+		</li>
+		<li>Feb. 2024 - present:
 			<br> 
 			Assistant professor at <strong>Shanghai Institute for Mathematics and Interdisciplinary Science (SIMIS)</strong>, Shanghai, China.
 			</br>
