--- a/events/index.html
+++ b/events/index.html
@@ -22,8 +22,11 @@ title: Events
 		<li> <strong> Seminar </strong> 
 			<ul style="font-size:1 em; line-height: 120%; list-style-type: circle;">
 				<li>
+					Physical Math Seminar @ SIMIS (Oct, 2024 - present)
+				</li>
+				<li>
 					SIMIS Seminar on Field Theory and String Theory 
-					(Mar, 2024 - present)
+					(Mar, 2024 - Aug, 2024)
 				</li>
 				<li>
 					Joint HEP-TH Seminar 
@@ -34,6 +37,9 @@ title: Events
 		<li>
 			<strong> Conference </strong> 
 			<ul>
+				<li>
+			 		Satellite conference of 2024 International Congress of Basic Science in Mathematical Physics (<a href="https://www.simis.cn/satellite-conference-of-2024-international-congress-of-basic-science-in-mathematical-physics/" target="_blank" rel="noopener noreferrer"> Website</a>, Jul. 7-12, 2024)
+				</li>
 				<li>
 			 		Strings at Sanya (<a href="http://www.tsimf.cn/meeting/detail?id=299" target="_blank" rel="noopener noreferrer"> Website</a>, Nov. 8-11, 2022)
 				</li>	
