--- a/events/index.html
+++ b/events/index.html
@@ -38,10 +38,10 @@ title: Events
 			<strong> Conference </strong> 
 			<ul>
 				<li>
-			 		Satellite conference of 2024 International Congress of Basic Science in Mathematical Physics (<a href="https://www.simis.cn/satellite-conference-of-2024-international-congress-of-basic-science-in-mathematical-physics/" target="_blank" rel="noopener noreferrer"> Website</a>, Jul. 7-12, 2024)
+			 		Satellite conference of 2024 International Congress of Basic Science in Mathematical Physics (<a href="https://www.simis.cn/satellite-conference-of-2024-international-congress-of-basic-science-in-mathematical-physics/" target="_blank" rel="noopener noreferrer"> Link </a>, Jul. 7-12, 2024)
 				</li>
 				<li>
-			 		Strings at Sanya (<a href="http://www.tsimf.cn/meeting/detail?id=299" target="_blank" rel="noopener noreferrer"> Website</a>, Nov. 8-11, 2022)
+			 		Strings at Sanya (<a href="http://www.tsimf.cn/meeting/detail?id=299" target="_blank" rel="noopener noreferrer"> Link </a>, Nov. 8-11, 2022)
 				</li>	
 			</ul>
 		</li>
