--- a/index.html
+++ b/index.html
@@ -14,20 +14,12 @@ title: Home
   
   <h2> Contact </h2>
   <p>
-  Shanghai Institute for Mathematics and Interdisciplinary Sciences <br>Yangpu District, Shanghai 200433, China
+  Shanghai Institute for Mathematics and Interdisciplinary Sciences <br>No. 657 Songhu Road, Yangpu District, Shanghai 200433, China
   </p>  
   <p>
-  Office: 6th Floor, Building 3, KIC Enterprise Center<br> E-mail: hzou "at" vt.edu
+  E-mail: hzou "at" vt.edu
   </p>
   
-  
-  <p style="font-size:18px";> <strong>Useful links:</strong> 
-    <br>
-    <a href="https://ymsc-strings.github.io" target="_blank" rel="noopener noreferrer">String Group at YMSC</a> | 
-    <a href="https://www.stringwiki.org/wiki/String_Theory_Wiki" target="_blank" rel="noopener noreferrer">String Theory Wiki</a> | 
-    <a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html" target="_blank" rel="noopener noreferrer">Some mathematical resources</a> |
-    <a href="http://researchseminars.org" target="_blank" rel="noopener noreferrer">Online seminars</a> 
-  </p>
 </div>
 
 
